# Papyrus-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  Papyrus.cpp
Artifact/: CMakeLists.txt
Artifact/Includes/Arf/Data/: StaticModel.h  VirtualStaticModel.h
Artifact/Schemes/: StaticModel.fbs
Artifact/Src/Data/: StaticModel.cpp
Atum/: CMakeLists.txt
Atum/Includes/Atm/VirtualStaticModel/: VsmMeshProcessor.h
Atum/Src/VirtualStaticModel/: Clusterizer.cpp  Clusterizer.h  VsmMeshProcessor.cpp
Caravan/: CMakeLists.txt
Caravan/Includes/Crv/: Pch.h
Caravan/Includes/Crv/Data/: Camera.h  StaticMesh.h  StaticModelCreateInfo.h  VerticesInfo.h
Caravan/Includes/Crv/PrivateData/: DataGenerators.h  StaticModel.h
Caravan/Includes/Crv/Renderers/: HelloTriangleRenderer.h  ImguiRenderer.h  PointCloudRenderer.h  StaticModelRenderer.h
Caravan/Shaders/: CmStaticModel.hlsli  PxHelloTriangle.h  PxStaticModel.h  PxStaticModel.hlsl  VxHelloTriangle.h  VxStaticModel.h  VxStaticModel.hlsl
Caravan/Shaders/HelloTriangle/: CmHelloTriangle.hlsli  PxHelloTriangle.h  VxHelloTriangle.h
Caravan/Shaders/PointRenderer/: CmPointRenderer.hlsli  PxPointRenderer.h  PxPointRenderer.hlsl  VxPointRenderer.h  VxPointRenderer.hlsl
Caravan/Shaders/StaticModel/: PxStaticModel.h  VxStaticModel.h  VxStaticModel.hlsl
Caravan/Src/: Pch.cpp
Caravan/Src/Data/: StaticMesh.cpp  StaticModel.cpp
Caravan/Src/Renderers/: HelloTriangleRenderer.cpp  ImguiRenderer.cpp  PointCloudRenderer.cpp  StaticModelRenderer.cpp
Caravan/Tests/: CMakeLists.txt
Caravan/Tests/Src/: StaticModelRendererFTests.cpp
Merchant/: CMakeLists.txt
Merchant/Includes/Mrc/: Exporter.h  Importer.h
Merchant/Includes/Mrc/Data/: AClusteredStaticModel.h  AStaticModel.h  Assets.h
Merchant/Includes/Mrc/Exporters/: AClusteredStaticModelExporter.h  AStaticModelExporter.h
Merchant/Includes/Mrc/Importers/: ASceneImporter.h  AStaticModelImporter.h  AssimpImporter.h  IImporter.h  StaticModelImporter.h
Merchant/Schemes/: AClusteredStaticModel.fbs  AScene.fbs  AStaticModel.fbs
Merchant/Src/: Exporter.cpp  Importer.cpp
Merchant/Src/Exporters/: AClusteredStaticModelExporter.cpp  AStaticModelExporter.cpp
Merchant/Src/Importers/: ASceneImporter.cpp  AStaticModelImporter.cpp  AssimpImporter.cpp  StaticModelImporter.cpp
Merchant/Tests/: CMakeLists.txt
Merchant/Tests/Src/: ImporterUTests.cpp
Nomad/: CMakeLists.txt
Nomad/Includes/Nmd/: Asserter.h  FileHelper.h  Logger.h
Nomad/Src/: Asserter.cpp  FileHelper .cpp  FileHelper.cpp  Logger.cpp  Pch.cpp
Oasis/: CMakeLists.txt
Oasis/Includes/Os/: IWindow.h  Key.h  OsType.h  WindowFactory.h
Oasis/Includes/Os/Wnd/: Window.h
Oasis/Src/: IWindow.cpp  Pch.cpp  WindowFactory.cpp
Oasis/Src/Wnd/: Window.cpp
Samples/: CMakeLists.txt
Samples/HelloArduino/: CMakeLists.txt  HelloArduino.ino
Samples/HelloArduino/Src/: Main.cpp
Samples/HelloTriangle/: CMakeLists.txt
Samples/ModelLoading/: CMakeLists.txt
Samples/ModelLoading/Src/: Main.cpp
Samples/ModelViewer/: CMakeLists.txt
Samples/ModelViewer/Res/: Suzanne.fbx  imgui.ini
Samples/ModelViewer/Src/: Main.cpp  SimpleCamera.cpp  SimpleCamera.h
Samples/PointCloudRenderer/: CMakeLists.txt
Samples/PointCloudRenderer/Res/: Maymun.asm  Maymun.sm
Samples/PointCloudRenderer/Src/: Main.cpp
Sand/: CMakeLists.txt
Sand/Includes/Snd/: InputParameter.h  Pch.h  ShaderCode.h
Sand/Includes/Snd/Dx12/: Buffer.h  CommandAllocator.h  CommandQueue.h  Context.h  DescriptorCpuHandle.h  DescriptorGpuHandle.h  DescriptorHeap.h  Device.h  Fence.h  GraphicsCommandList.h  IndexBufferView.h  Object.h  PipelineDescriptor.h  PipelineState.h  Resource.h  RootSignature.h  ScissorRect.h  StaticSamplers.h  Swapchain.h  Texture.h  UploadContext.h  VertexBufferView.h  Viewport.h
Sand/Includes/Snd/Dx12/Utils/: Common.h  DxHelpers.h
Sand/Src/: Pch.cpp
Sand/Src/Dx12/: Buffer.cpp  CommandAllocator.cpp  CommandQueue.cpp  Context.cpp  DescriptorHeap.cpp  Device.cpp  Fence.cpp  GraphicsCommandList.cpp  IndexBufferView.cpp  PipelineDescriptor.cpp  PipelineState.cpp  Resource.cpp  RootSignature.cpp  StaticSamplers.cpp  Swapchain.cpp  Texture.cpp  UploadContext.cpp  VertexBufferView.cpp
Sand/Tests/: CMakeLists.txt
Sand/Tests/Src/: Pch.cpp  Pch.h
Sand/Tests/Src/Dummy/: Dummy.cpp  Dummy.h
Sand/Tests/Src/Dx12/: DeviceUTests.cpp
Tools/: CMakeLists.txt
Tools/AssetConverter/: CMakeLists.txt  imgui.ini
Tools/AssetConverter/Input/: Cube.fbx
Tools/AssetConverter/Output/: StanfordBunny.asm
Tools/AssetConverter/Src/: Main.cpp
Tools/AssetConverter/Src/Ui/: ConvertConsole.cpp  ConvertConsole.h  ConvertOptions.cpp  ConvertOptions.h  FileExplorer.cpp  FileExplorer.h  InputBrowser.cpp  InputBrowser.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  OutputBrowser.cpp  OutputBrowser.h  SimpleBrowser.cpp  SimpleBrowser.h
